31_ContourIngress/04_proxyrules.yml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: contourpolicy
spec:
  virtualhost:
    fqdn: www.testthinknyx.com
  routes:
    - conditions:
      - prefix: /webdeponesvc
      services:
        - name: webdeponesvc
          port: 80
#    - conditions:
#      - prefix: /webdeptwosvc
#      services:
#        - name: webdeptwosvc
#          port: 80
